--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,13 @@
             android:label="@string/title_activity_record_of_training"
             android:theme="@style/MyAppTheme" />
         <activity
-            android:name=".makingYourOwnTraining.MainRecordOfTraining"
+            android:name=".makingYourOwnRecord.MainRecord"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:label="@string/title_activity_record_of_training"
             android:theme="@style/MyAppTheme" />
         <activity
-            android:name=".tabs.CreateWorkout"
+            android:name=".tabs.CreateRecord"
             android:exported="false" />
         <activity
             android:name=".tabs.Statistics"
@@ -44,6 +44,9 @@
         <activity
             android:name=".tabs.Profile"
             android:exported="true" />
+        <activity
+            android:name=".tabs.RecordDetails"
+            android:label="Training Details" />
         <activity
             android:name=".tabs.StatisticsOfSquats"
             android:exported="false" />
