--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/MyAppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".useRecords.Playback"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_playback"
+            android:theme="@style/MyAppTheme.Fullscreen" />
+        <activity
             android:name=".tabs.MenuActivity"
             android:exported="true">
             <intent-filter>
